<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.tta.ejemploclase.MainActivity"
    tools:showIn="@layout/activity_main">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login De Usuario"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/menu_login_color"
            android:id="@+id/textView" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_usuario" />

            <EditText
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/menu_usuario_contenido" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_password" />

            <EditText
                android:id="@+id/passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/menu_password_contenido"
                android:inputType="textPassword" />

        </GridLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_boton_acceder"
            android:onClick="login"/>

</LinearLayout>



